# ovault

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  document.py  documentation.md  flake.nix  ovault.pyi  pyproject.toml  pyvault.pyi  test.py  test.sh  todo.md
.github/workflows/: check.yml  docs.yml  release.yaml
.hooks/: pre-commit  pre-push
docs/: .gitignore  build.py  documentation.mdx
examples/: 1_overview.py  2_find_tag.py  3_find_headings.py  4_check_external_links.py  4_graph_image.py  5_create_vault.py  5_graph_image.py  6_create_vault.py  6_rename_note.py  7_add_frontmatter.py  7_rename_note.py  8_add_frontmatter.py  8_formatter.py  9_formatter.py
python/ovault/: __init__.py  check_links.py  filename_compatibility.py  help.py  info.py  mv.py  name_pasted_images.py  visualize_graph.py
scripts/: build-docs.py  test.sh  txtx.py
src/: lexer.rs  lib.rs  logging.rs  normalize.rs  tests.rs  vault.rs
src/lexer/: mod.rs  span.rs  tests.rs  to_markdown.rs  tokens.rs
src/lexer/tests/: mod.rs  test_implementation.rs  test_lex_tokens.rs
src/normalize/: mod.rs  tests.rs
src/vault/: attachment.rs  mod.rs  note.rs
src/vault/note/: frontmatter.rs  mod.rs
test-vaults/Obsidian Sandbox/: Plugins make Obsidian special for you.md
test-vaults/Obsidian Sandbox/Formatting/: Callout.md  Emphasis.md  Math.md  Task.md
test-vaults/simple_vault/: callout.md  code.md  first_note.md  frontmatter.md  list.md  numbers.txt  quote.md  second_note.md  todo.md  websites.md
test-vaults/simple_vault/.obsidian/: workspace.json
test-vaults/simple_vault/sub/: ignored.txt  not-ignored.txt  todo.md
test_vaults/Obsidian Sandbox/.obsidian/: workspace.json
tests/: conftest.py  record.py  rere.py  test_examples.py  test_examples_expected.bi  test_frontmatter.py  test_ovault.py
tests/simple_vault/: .vault-ignore  callout.md  first_note.md  second_note.md
tests/simple_vault/.obsidian/: workspace.json
tests/simple_vault/sub/: sub-note.md
