[package]
name = "ovault"
version = "0.1.0"
edition = "2021"

[lib]
name = "ovault"

[features]
default = []
python = ["pyo3", "syn", "quote"]

[dependencies]
glob = "0.3.2"
pyo3 = { version = "0.23.4", optional = true }

[build-dependencies]
syn =  { version = "2.0.96", optional = true }
quote = { version = "1.0.38", optional = true }
