[package]
name = "ovault"
version = "0.0.1"
edition = "2021"

[lib]
name = "ovault"
crate-type = ["cdylib"]

[features]
default = []
python = ["pyo3", "syn", "quote"]

[dependencies]
glob = "0.3.2"
pyo3 = { version = "0.23.4", optional = true, features = ["extension-module", "abi3-py37"] }

[build-dependencies]
syn =  { version = "2.0.96", optional = true }
quote = { version = "1.0.38", optional = true }
