[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["python"]
python-source = "python"

[project]
name = "ovault"
authors = [{name = "Balder Holst", email = "balderwh@gmail.com"}]
dynamic = ["version"]
description = "Library for Managing your Obsidian Vault "
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["Obsidian", "Vault", "Notes"]

[project.urls]
Documentation = "https://balderholst.github.io/ovault/"
Repository = "https://github.com/BalderHolst/ovault"

[project.optional-dependencies]
dev = [
    "maturin",
    "pytest",
    "pdoc3",
]
util_deps = [
    "requests",
    "pyvis",
]
